--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -557,7 +557,7 @@
     "X_train_300 = X_train\n",
     "y_train_300 = y_train\n",
     "\n",
-    "X_train_10000 = X_train.sample(n=10000, replace=True)\n",
+    "X_train_10000 = X_train.sample(n=10000, replace=True) # Note: Resampling data to produce 10,000 row data set purely for estimating computational cost.\n",
     "y_train_10000 = y_train.ix[X_train_10000.index]\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
@@ -657,7 +657,7 @@
    "source": [
     "The predictive model looks at characteristics of the student, including age, gender, family educational and employment background, health, and recreational preferences, in order to make a prediction about that student's graduation status (pass_yes or pass_no).  The intention of the model is to provide teachers or counselors with greater predictive insights into which of their students are most likely to fail, with the hope that identifying high-risk students early will provide better targeting for interventional services.  When a new student is scored through the model, their background information is provided to the model and it will return a prediction of whether that student will pass or fail.  In order to combat over-fitting, the model is only trained on 300 of the 395 total observations.  The remaining 95 observations (the testing set) are used to validate how well the model performs on observations that it did not directly encouncer in training.  For classification problems, performance is usually measured by some combination of accuracy (the percentage of correct predictions), precision (the percentage of predicted positives that are correctly labelled), recall (the percentage of actual positives that are correctly labelled), or F1 (an average of recall and precision).\n",
     "\n",
-    "The Support Vector Classifier learns to make its predictions by attempting to draw a simple linear surface that separates all of the positive and negative labels (pass_yes and pass_no). In a two dimensional space, that means simply drawing a line that correctly seperates all (or the most possible) of the labels.  Beyond a two-dimensional space, the SVC attempts to draw a hyperplane, a multi-dimensional linear surface, that correctly separates the labelled points.  The SVC chooses this surface by maximizing the margin between the decision boundary and the correctly labeled points closely bordering that boundary.  This process of drawing simple lines or surfaces to seperate points would in-and-of-itself not be a particularly flexible problem solving method; however, the SVC employs something called the kernel-trick in order to draw more complex decision boundaries.  In essence, the SVC applies some function to two or more training features in order to transform them into a more convenient and (usually) lower dimensional space.  For example, the Radial Basis Function (RBF) is a commonly used kernel that takes two inputs and returns a singular output based on their radial distance from the origin: RBF(x,y) -> z. Almost any function can be used as a kernel, however specific characteristics, such as closed differentiability, can make certain functions better fits as kernels.  "
+    "The Support Vector Classifier learns to make its predictions by attempting to draw a simple linear surface that separates all of the positive and negative labels (pass_yes and pass_no). In a two dimensional space, that means simply drawing a line that correctly seperates all (or the most possible) of the labels.  Beyond a two-dimensional space, the SVC attempts to draw a plane that correctly separates the labelled points.  The SVC chooses this surface by maximizing the margin between the decision boundary and the correctly labeled points closely bordering that boundary.  This process of drawing simple lines or surfaces to seperate points would in-and-of-itself not be a particularly flexible problem solving method; however, the SVC employs something called the kernel-trick in order to draw more complex decision boundaries.  In essence, the SVC applies some function to two or more training features in order to transform them into a more convenient and (usually) lower dimensional space. Almost any function can be used as a kernel, however specific characteristics, such as closed differentiability, can make certain functions better fits as kernels.  "
    ]
   },
   {
