Customer Segments - 2nd Submission

--- a/projects/creating_customer_segments/customer_segments.ipynb
+++ b/projects/creating_customer_segments/customer_segments.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -103,100 +103,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
+       "      <td>440.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>12000.297727</td>\n",
-       "      <td>5796.265909</td>\n",
-       "      <td>7951.277273</td>\n",
-       "      <td>3071.931818</td>\n",
-       "      <td>2881.493182</td>\n",
-       "      <td>1524.870455</td>\n",
+       "      <td>12000.30</td>\n",
+       "      <td>5796.27</td>\n",
+       "      <td>7951.28</td>\n",
+       "      <td>3071.93</td>\n",
+       "      <td>2881.49</td>\n",
+       "      <td>1524.87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>12647.328865</td>\n",
-       "      <td>7380.377175</td>\n",
-       "      <td>9503.162829</td>\n",
-       "      <td>4854.673333</td>\n",
-       "      <td>4767.854448</td>\n",
-       "      <td>2820.105937</td>\n",
+       "      <td>12647.33</td>\n",
+       "      <td>7380.38</td>\n",
+       "      <td>9503.16</td>\n",
+       "      <td>4854.67</td>\n",
+       "      <td>4767.85</td>\n",
+       "      <td>2820.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>3.00</td>\n",
+       "      <td>3.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>3127.750000</td>\n",
-       "      <td>1533.000000</td>\n",
-       "      <td>2153.000000</td>\n",
-       "      <td>742.250000</td>\n",
-       "      <td>256.750000</td>\n",
-       "      <td>408.250000</td>\n",
+       "      <td>3127.75</td>\n",
+       "      <td>1533.00</td>\n",
+       "      <td>2153.00</td>\n",
+       "      <td>742.25</td>\n",
+       "      <td>256.75</td>\n",
+       "      <td>408.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>8504.000000</td>\n",
-       "      <td>3627.000000</td>\n",
-       "      <td>4755.500000</td>\n",
-       "      <td>1526.000000</td>\n",
-       "      <td>816.500000</td>\n",
-       "      <td>965.500000</td>\n",
+       "      <td>8504.00</td>\n",
+       "      <td>3627.00</td>\n",
+       "      <td>4755.50</td>\n",
+       "      <td>1526.00</td>\n",
+       "      <td>816.50</td>\n",
+       "      <td>965.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>16933.750000</td>\n",
-       "      <td>7190.250000</td>\n",
-       "      <td>10655.750000</td>\n",
-       "      <td>3554.250000</td>\n",
-       "      <td>3922.000000</td>\n",
-       "      <td>1820.250000</td>\n",
+       "      <td>16933.75</td>\n",
+       "      <td>7190.25</td>\n",
+       "      <td>10655.75</td>\n",
+       "      <td>3554.25</td>\n",
+       "      <td>3922.00</td>\n",
+       "      <td>1820.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>112151.000000</td>\n",
-       "      <td>73498.000000</td>\n",
-       "      <td>92780.000000</td>\n",
-       "      <td>60869.000000</td>\n",
-       "      <td>40827.000000</td>\n",
-       "      <td>47943.000000</td>\n",
+       "      <td>112151.00</td>\n",
+       "      <td>73498.00</td>\n",
+       "      <td>92780.00</td>\n",
+       "      <td>60869.00</td>\n",
+       "      <td>40827.00</td>\n",
+       "      <td>47943.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               Fresh          Milk       Grocery        Frozen  \\\n",
-       "count     440.000000    440.000000    440.000000    440.000000   \n",
-       "mean    12000.297727   5796.265909   7951.277273   3071.931818   \n",
-       "std     12647.328865   7380.377175   9503.162829   4854.673333   \n",
-       "min         3.000000     55.000000      3.000000     25.000000   \n",
-       "25%      3127.750000   1533.000000   2153.000000    742.250000   \n",
-       "50%      8504.000000   3627.000000   4755.500000   1526.000000   \n",
-       "75%     16933.750000   7190.250000  10655.750000   3554.250000   \n",
-       "max    112151.000000  73498.000000  92780.000000  60869.000000   \n",
-       "\n",
-       "       Detergents_Paper  Delicatessen  \n",
-       "count        440.000000    440.000000  \n",
-       "mean        2881.493182   1524.870455  \n",
-       "std         4767.854448   2820.105937  \n",
-       "min            3.000000      3.000000  \n",
-       "25%          256.750000    408.250000  \n",
-       "50%          816.500000    965.500000  \n",
-       "75%         3922.000000   1820.250000  \n",
-       "max        40827.000000  47943.000000  "
+       "           Fresh      Milk   Grocery    Frozen  Detergents_Paper  Delicatessen\n",
+       "count     440.00    440.00    440.00    440.00            440.00        440.00\n",
+       "mean    12000.30   5796.27   7951.28   3071.93           2881.49       1524.87\n",
+       "std     12647.33   7380.38   9503.16   4854.67           4767.85       2820.11\n",
+       "min         3.00     55.00      3.00     25.00              3.00          3.00\n",
+       "25%      3127.75   1533.00   2153.00    742.25            256.75        408.25\n",
+       "50%      8504.00   3627.00   4755.50   1526.00            816.50        965.50\n",
+       "75%     16933.75   7190.25  10655.75   3554.25           3922.00       1820.25\n",
+       "max    112151.00  73498.00  92780.00  60869.00          40827.00      47943.00"
       ]
      },
      "metadata": {},
@@ -205,7 +195,7 @@
    ],
    "source": [
     "# Display a description of the dataset\n",
-    "display(data.describe())"
+    "display(data.describe().round(2))"
    ]
   },
   {
@@ -313,9 +303,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Samples (0,1) could potentially be from a restaurant, as a significant portion of their sales is composed of Fresh foods.\n",
+    "Sample (0) has about the average amount of Fresh spending (falling in the 3rd quartile rank-wise), below average Milk spending (2nd quartile), very slightly below average Grocery (although still falling in the 3rd quartile), well below average Frozen spending (1st quartile), slightly above average Detergents_Paper spending (3rd quartile), and well below average Delicatessen spending (2nd quartile).  Based on these characteristics, Sample (0) could potentially be from a restaurant, as it has above average spending on Fresh foods but below averge on Frozen foods and Delicatessen, potentially implying that it sold freshly prepared food as opposed to groceries or pre-prepared meals.\n",
     "\n",
-    "Sample (2) could potentially be a market or retail grocery store, as relatively little of their sales are of Fresh foods and most are of Grocery.  Also, Sample (2) has a much larger proportion of Delicatessen foods than Samples (0,1), which could indicate that the establishment is a market of some kind."
+    "Sample (1) has slightly below average Fresh spending (almost precisely 50th percentile), below average Milk spending (2nd quartile), average Grocery spending (3rd quartile), significantly below average Frozen spending (1st quartile), above average Detergents_Paper spending (4th quartile), and well below average Delicatessen spending (1st quartile).  Similar to Sample (0), Sample (1) has close to average Fresh spending, while significantly below average Frozen and Deli spending.  Unlike Sample (0), Sample (1) has significantly above average Detergents_Paper spending.  We might hypothesize that this could also be a restaurant, but one that specializes in take-out type meals, which would account for the much larger Detergents_Paper spending.\n",
+    "\n",
+    "Sample (2) has well below average Fresh spending (1st quartile), below average Milk spending (almost precisely 50th percentile), above average Grocery spending (4th quartile), below average Frozen (2nd quartile), above average Detergents_Paper (4th quartile), and above average Delicatessen (4th quartile).  Sample (2) could potentially be a market or retail grocery store, as relatively little of their sales are of Fresh foods and most are of Grocery.  Also, Sample (2) has a much larger proportion of Delicatessen foods than Samples (0,1), which could indicate that the establishment is a market of some kind."
    ]
   },
   {
@@ -1460,7 +1452,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first two principal components explain a total of 71.3% of the variance.  The first four principal components explain 83.3% of the total variance.  Based on the visualization, the first component appears to be a measure of the the difference between the amount of Fresh and Frozen food and the amount of the other four types, with particular sensitivity for Detergents_Paper.  I say that this is a measurement of the difference because the value of the component would have its largest magnitude when these groups moved in opposite directions: a low amount of Fresh/Frozen and large amount of Detergent would produce a large positive value, while a high amount of Fresh/Frozen and a low amount of Detergent would produce a low value.  The second component represents a measure of the combined spending on Fresh, Grocery and Delicatessen, which may help to indicate whether a customer sells a large amount of food freshly prepared from these items.  The third component represents the difference in spending primarily between Fresh and the combined Frozen and Delicatessen.  The fourth component represents the difference in spending primarily between Frozen and combined Fresh and Delicatessen.  "
+    "The first two principal components explain a total of 71.3% of the variance.  The first four principal components explain 93.3% of the total variance.  \n",
+    "\n",
+    "Based on the visualization, the first component appears to be a measure of the the difference between the amount of Fresh and Frozen food and the amount of the other four types, with particular sensitivity for Detergents_Paper.  I say that this is a measurement of the difference because the value of the component would have its largest magnitude when these groups moved in opposite directions: a low amount of Fresh/Frozen and large amount of Detergent would produce a large positive value, while a high amount of Fresh/Frozen and a low amount of Detergent would produce a low value.  \n",
+    "\n",
+    "The second component represents a measure of the combined spending on Fresh, Grocery and Delicatessen, which may help to indicate whether a customer sells a large amount of food freshly prepared from these items.  All of the weights in this component are positive, however Milk, Grocery and Detergent have a significantly lower weight than Fresh, Grocery and Deli.\n",
+    "\n",
+    "The third component represents the difference in spending primarily between Fresh and Detergents_Paper versus the combined Frozen and Delicatessen.  Fresh, Grocery and Detergent_Paper have positive weights (Grocery near zero), while Milk, Frozen and Deli have negative weights (Milk near zero).  This component may be identifying variation between a restaurant who sells mostly meals prepared on premises and a market or deli that sells pre-made and frozen meals.  \n",
+    "\n",
+    "The fourth component represents the difference in spending primarily between Frozen and combined Fresh and Delicatessen.  Milk, Grocery, Frozen, and Detergents_Paper all have positive weights (Milk and Grocery near zero), while Fresh and Deli have negative weights.  This component may be identifying variations between deli type customers who may sell something like sandwiches made from Fresh and Deli ingredients; and market or convenient store type customers who may sell something like frozen or pre-made dinners."
    ]
   },
   {
@@ -1889,9 +1889,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Segment 0 is characterized by a high level of Milk, Grocery and Deetergents spending, especially relative to Fresh and Frozen spending. Based upon these characteristics, Segment 0 might represent a market or grovery type store, where they predominately sell foods that are not necessarily prepared on premises.\n",
+    "Segment 0 (the right hand, red-dotted side in the visualization) is characterized by a high level of Milk, Grocery and Deetergents spending, especially relative to Fresh and Frozen spending. Based upon these characteristics, Segment 0 might represent a market or grovery type store, where they predominately sell foods that are not necessarily prepared on premises.\n",
     "\n",
-    "Segment 1 is characterized by a high level of spending on Fresh and Frozen foods, especially relative to Grocery and Detergent.  The high level of Fresh and Frozen spending may indicate that this is a restaurant type store, where much of the spending is on ingredients that are used to in the preparation of meals created on premises."
+    "Segment 1 (the left hand, purple-dotted side in the visualization) is characterized by a high level of spending on Fresh and Frozen foods, especially relative to Grocery and Detergent.  The high level of Fresh and Frozen spending may indicate that this is a restaurant type store, where much of the spending is on ingredients that are used to in the preparation of meals created on premises."
    ]
   },
   {
@@ -1935,7 +1935,7 @@
     "collapsed": false
    },
    "source": [
-    "All three sample points are in Cluster/Segment 0."
+    "All three sample points are in Cluster/Segment 0 (more Retail than Restaurant).  That prediction is consistent with our understanding for Sample 2; however, it contradicts our original intepretation of Samples (0,1).  I think that this is most likely due to the fact that our original intepretation significantly underestimated the importance of the Detergents_Paper feature in categorizing the customer segments.  From the first principal component, we can see that Detergents_Paper has the single largest absolute weight and is directionally opposite the combined Fresh and Frozen components.  Our original intepretation focused primarily on the Fresh and Frozen components, but did not sufficiently recognize the information from the Detergents_Paper feature.  To our benefit, Samples (0,1) both fall fairly close to the boundary of the two clusters, so it is not entirely unreasonable that we would misplace them solely upon initial inspection."
    ]
   },
   {
